# motif

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.beads/: interactions.jsonl  metadata.json
.github/workflows/: bridge-desktop.yml  bridge-windows.yml  capture-mobile.yml
apps/bridge/: Cargo.toml  index.html  package.json  tsconfig.json  vite.config.ts
apps/bridge/core/: Cargo.toml
apps/bridge/core/src/: cloud_relay.rs  discovery.rs  lib.rs  server.rs
apps/bridge/core/tests/: cloud_relay.rs  deletion.rs  handoff.rs  metadata.rs  protocol.rs  receiver.rs  server.rs
apps/bridge/src/: main.ts  styles.css
apps/bridge/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/bridge/src-tauri/capabilities/: default.json
apps/bridge/src-tauri/icons/: icon.icns
apps/bridge/src-tauri/src/: lib.rs  main.rs  transcode.rs
apps/bridge/src-tauri/tests/fixtures/: tone.m4a
apps/capture/: .gitignore  App.tsx  app.json  eas.json  index.ts  metro.config.js  package.json  vitest.config.ts
apps/capture/src/: account-client.ts  account-storage.ts  background-sync.ts  bridge-discovery-types.ts  bridge-discovery.ts  bridge-discovery.web.ts  geolocation.ts  idea-storage.ts  idea-sync.ts  recording-config.ts  settings-storage.ts  (+1 more)
docs/adr/: 0001-share-via-os-share-sheet.md  0002-tiered-sync-and-storage.md  0003-mobile-stack.md  0004-backend-serverless-aws.md  0005-cross-device-delete-tombstones.md  0006-per-field-last-write-wins-metadata.md
docs/agents/: issue-tracker.md  triage-labels.md
infra/: .gitignore  README.md  cdk.json  package.json  tsconfig.json
infra/lambda/: handler.js  handler.test.js
infra/lib/: motif-backend-stack.ts
infra/scripts/: smoke-auth.ts
(+25 files in other folders)
