# Cargo workspace for Bridge's Rust side. `bridge-core` owns the testable
# domain logic (local-network discovery/transfer, cloud relay client,
# transcode orchestration, multi-device pairing); `motif-bridge` (src-tauri)
# is a thin Tauri adapter over it. Kept separate from the pnpm/JS tooling
# per ADR 0003.
[workspace]
resolver = "2"
members = ["core", "src-tauri"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
