[package]
name = "bridge-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
mdns-sd = { version = "0.20.2", default-features = false }
