[package]
name = "motif-bridge"
version.workspace = true
edition.workspace = true
description = "Motif Bridge — desktop companion (Tauri shell)"

[lib]
# The lib is what mobile/desktop entry points call into; the bin is a thin
# wrapper. crate-type covers desktop + potential mobile targets.
name = "motif_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-drag = "2.1.1"
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
bridge-core = { path = "../core" }
hound = "3.5"
symphonia = { version = "0.5", default-features = false, features = ["aac", "isomp4"] }
